@@ -60,7 +60,8 @@ struct _GtkIMContextClass
 				  GdkWindow      *window);
   void     (*get_preedit_string) (GtkIMContext   *context,
 				  gchar         **str,
-				  PangoAttrList **attrs);
+				  PangoAttrList **attrs,
+				  gint           *cursor_pos);
   gboolean (*filter_keypress)    (GtkIMContext   *context,
 			          GdkEventKey    *event);
   void     (*focus_in)           (GtkIMContext   *context);
@@ -74,7 +75,8 @@ void          gtk_im_context_set_client_window  (GtkIMContext   *context,
 						 GdkWindow      *window);
 void          gtk_im_context_get_preedit_string (GtkIMContext   *context,
 						 gchar         **str,
-						 PangoAttrList **attrs);
+						 PangoAttrList **attrs,
+						 gint           *cursor_pos);
 gboolean      gtk_im_context_filter_keypress    (GtkIMContext   *context,
 						 GdkEventKey    *event);
 void          gtk_im_context_focus_in           (GtkIMContext   *context);
